{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 72,
  "lineage": "f49e6359-0514-da9f-c625-9fd330dac0b4",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0166fe664262f664c",
            "arn": "arn:aws:ec2:us-east-1:058264383077:instance/i-0044b35e1b960abf4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0044b35e1b960abf4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df59cc1a1fdb99b4",
            "private_dns": "ip-10-0-0-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.127",
            "public_ip": "54.221.143.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "IaC_Managed": "True",
                  "Owner": "jj-tech-model-batch"
                },
                "tags_all": {
                  "IaC_Managed": "True",
                  "Owner": "jj-tech-model-batch"
                },
                "throughput": 0,
                "volume_id": "vol-0e0164be64e104213",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01e1f171305fd43f1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b36ee4173ad053b",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "bastion-host",
              "Owner": "jj-tech-model-batch"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e1f171305fd43f1"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.bastion_sg",
            "module.compute.aws_security_group.webserver_sg",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "instance-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0166fe664262f664c",
            "arn": "arn:aws:ec2:us-east-1:058264383077:instance/i-0d496fb5bd22815af",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d496fb5bd22815af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fa6cbf960ab7a30",
            "private_dns": "ip-10-0-2-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "IaC_Managed": "True",
                  "Owner": "jj-tech-model-batch"
                },
                "tags_all": {
                  "IaC_Managed": "True",
                  "Owner": "jj-tech-model-batch"
                },
                "throughput": 0,
                "volume_id": "vol-0dc2fe6e6a6e4bc6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ba488309461e1ed3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02de5aedff19e6c44",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "web-server",
              "Owner": "jj-tech-model-batch"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba488309461e1ed3"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.bastion_sg",
            "module.compute.aws_security_group.webserver_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:security-group/sg-01e1f171305fd43f1",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e1f171305fd43f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "058264383077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "bastion-sg",
              "Owner": "jj-tech-model-batch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:security-group/sg-0ba488309461e1ed3",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba488309461e1ed3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Webserver sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e1f171305fd43f1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "058264383077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "bastion-sg",
              "Owner": "jj-tech-model-batch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.bastion_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:internet-gateway/igw-047db0d36700ce12d",
            "id": "igw-047db0d36700ce12d",
            "owner_id": "058264383077",
            "tags_all": {
              "IaC_Managed": "True",
              "Owner": "jj-tech-model-batch"
            },
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:route-table/rtb-0eef7dcbd08dc1589",
            "id": "rtb-0eef7dcbd08dc1589",
            "owner_id": "058264383077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047db0d36700ce12d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "IaC_Managed": "True",
              "Owner": "jj-tech-model-batch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02863233df17b2dda",
            "route_table_id": "rtb-0eef7dcbd08dc1589",
            "subnet_id": "subnet-05b36ee4173ad053b"
          },
          "dependencies": [
            "module.network.aws_route_table.rt",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri-subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:subnet/subnet-02de5aedff19e6c44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02de5aedff19e6c44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-subnet1"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "pri-subnet1",
              "Owner": "jj-tech-model-batch"
            },
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "pri-subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:subnet/subnet-0eb6ff329432d77e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb6ff329432d77e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-subnet2"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "pri-subnet2",
              "Owner": "jj-tech-model-batch"
            },
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "pub-subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:subnet/subnet-05b36ee4173ad053b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b36ee4173ad053b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264383077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet1"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "pub-subnet1",
              "Owner": "jj-tech-model-batch"
            },
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "pub-subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:subnet/subnet-01ca15866f4b3ca3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca15866f4b3ca3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264383077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet2"
            },
            "tags_all": {
              "IaC_Managed": "True",
              "Name": "pub-subnet2",
              "Owner": "jj-tech-model-batch"
            },
            "vpc_id": "vpc-0ae287c6aeca7603a"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264383077:vpc/vpc-0ae287c6aeca7603a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b2cfc31abd2ed87",
            "default_route_table_id": "rtb-06321020cd0ee2c44",
            "default_security_group_id": "sg-0fb52ecf1a5d69b58",
            "dhcp_options_id": "dopt-088bcf0cbc7609eef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae287c6aeca7603a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06321020cd0ee2c44",
            "owner_id": "058264383077",
            "tags_all": {
              "IaC_Managed": "True",
              "Owner": "jj-tech-model-batch"
            }
          }
        }
      ]
    }
  ]
}